name:           alldoc
version:        0.1
synopsis:       Tool to browse all kinds of API docs.
description:    Tool to browse all kinds of API docs.
category:       Tool
homepage:       http://github.com/rickardlindberg/alldoc
author:         Rickard Lindberg <ricli85@gmail.com>
maintainer:     Rickard Lindberg <ricli85@gmail.com>
cabal-version:  >= 1.8
license:        BSD3
license-file:   LICENSE
build-type:     Simple

Flag dev
  Description: Enable warnings
  Default:     False

source-repository head
  type:     git
  location: http://github.com/rickardlindberg/alldoc

executable alldoc
  main-is:            Main.hs
  hs-source-dirs:     src
  if flag(dev)
    ghc-options:      -fwarn-unused-imports -Werror
  build-depends:      base >= 4 && <= 5
               ,      haskell98
               ,      tagsoup

Test-Suite test-alldoc
  type:               exitcode-stdio-1.0
  main-is:            AllTests.hs
  other-modules:      Asserts
               ,      Fixtures
  hs-source-dirs:     tests src
  if flag(dev)
    ghc-options:      -fwarn-unused-imports -Werror
  build-depends:      base >= 4 && <= 5
               ,      haskell98
               ,      tagsoup

               ,      QuickCheck
               ,      hspec
               ,      HUnit
